# amdad-app

./: .env.example  .gitignore  README.md  index.html  marketing-automation-project-report-ar.md  pyproject.toml  styles.css
app/: config.py  crud.py  database.py  main.py  models.py  schemas.py
app/services/: analytics.py  autopilot.py  content_generator.py  facebook.py  intelligence.py  planner.py  scheduler.py
tests/: test_analytics.py  test_autopilot.py  test_facebook_service.py  test_health.py  test_intelligence.py  test_planner.py  test_scheduler.py
